# ros2_taurus_ws

./: .gitignore
install/: local_setup.sh  setup.sh
install/hw_t/share/$(PROJECT_NAME)/launch/: taurus_urdf_launch.py
install/hw_t/share/ament_index/resource_index/package_run_dependencies/: hw_t
install/hw_t/share/hw_t/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hw_t/share/hw_t/urdf/: wheelcheck.urdf.xacro
src/hw_t/: CMakeLists.txt  package.xml
src/hw_t/include/hw_t/: moonsModbus.hpp
src/hw_t/launch/: taurus_urdf_launch.py
src/hw_t/src/: hardware_interface.cpp  moonsModbus.cpp  test  test_hardware_interface.cpp  test_motor  test_motor.cpp
src/hw_t/stl/: Drive_wheel.stl  Pu_wheel_without_ taper.stl  chasi.stl  chassi_new.stl  moons_wheel.stl  sick_tim_5xx.stl  wheel_new.stl
src/hw_t/urdf/: _d435.urdf.xacro  wheelcheck.urdf.xacro
